# open-notebook

./: .buildinfo  .buildinfo.bak  .copier-answers.yml  .pre-commit-config.yaml  .pylintrc.toml  .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  authors.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  license.html  navigation.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js
.github/workflows/: ci.yml
_static/: documentation_options.js
docs/: conf.py
examples/: index.html
reference/: cli.html  index.html
requirements/: py314-dev.yaml  uvx-tools.txt
requirements/lock/: uvx-tools.txt
src/open_notebook/: _typing.py  cli.py  config.py  utils.py
tests/: test_open_notebook.py  test_smoke.py  utils.py
tools/: shared.just
